--- a/ERP/Core.Erp.Web/Areas/Compras/Views/AprobacionOC/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/AprobacionOC/Index.cshtml
@@ -28,7 +28,7 @@
         var datos = {
             IdEmpresa: $("#IdEmpresa").val(),
             IDs: selectedIDs,
-            IdEstadoAprobacion: $("#btn_aprobar").attr('estado'),
+            IdEstadoAprobacion: $("#btn_aprobar").val(),
         }
         $("#btn_aprobar").attr("disabled", true);
         $.ajax({
@@ -53,7 +53,7 @@
         var datos = {
             IdEmpresa: $("#IdEmpresa").val(),
             IDs: selectedIDs,
-            IdEstadoAprobacion: $("#btn_reprobar").attr('estado'),
+            IdEstadoAprobacion: $("#btn_reprobar").val(),
         }
         $("#btn_aprobar").attr("disabled", true);
         $.ajax({
@@ -168,8 +168,8 @@
             @Html.Action("GridViewPartial_aprobacion_oc", new { IdSucursal = Model.IdSucursal, fecha_ini = Model.fecha_ini, fecha_fin = Model.fecha_fin })
 
                     <div class="box-footer">
-                        <button type="button" class="btn btn-primary" id="btn_aprobar" estado="APRO" onclick="aprobar();">Aprobar</button>
-                        <button type="button" class="btn btn-danger" id="btn_reprobar" estado="REPRO" onclick="reprobar();">Reprobar</button>
+                        <button type="button" class="btn btn-primary" id="btn_aprobar"  onclick="aprobar();">Aprobar</button>
+                        <button type="button" class="btn btn-danger" id="btn_reprobar"  onclick="reprobar();">Reprobar</button>
                     </div>
 
                 </div>
