--- a/ERP/Core.Erp.Web/Areas/Compras/Views/AprobacionOC/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/AprobacionOC/Index.cshtml
@@ -162,20 +162,31 @@
         <div class="box-body">
             @Html.Action("GridViewPartial_aprobacion_oc", new { IdSucursal = Model.IdSucursal, fecha_ini = Model.fecha_ini, fecha_fin = Model.fecha_fin })
 
-                    <div class="box-footer">
-                        <button type="button" class="btn btn-success" id="btn_aprobar" estado="APRO" onclick="aprobar();">Aprobar</button>
-                        <button type="button" class="btn btn-danger" id="btn_rechazar" estado="REPRO" onclick="rechazar();">Rechazar</button>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <label for="Observacion">Observación*</label>
+                            @Html.TextAreaFor(q => q.Observacion, new { @class = "form-control", @rows="1" })
+                            @Html.ValidationMessageFor(q => q.Observacion, "", new { @class = "text-danger" })
+                        </div>
                     </div>
-
                 </div>
-        <!-- /.box-body -->
-        <div class="box-footer">
-            [@Session["IdEmpresa"]] @Session["nom_empresa"]
-        </div>
-        <!-- /.box-footer-->
-
-
-
+            </div>
+            <div class="box-footer">
+                <button type="button" class="btn btn-success" id="btn_aprobar" estado="APRO" onclick="aprobar();">Aprobar</button>
+                <button type="button" class="btn btn-danger" id="btn_rechazar" estado="REPRO" onclick="rechazar();">Rechazar</button>
+            </div>
 
         </div>
-}
+                <!-- /.box-body -->
+                <div class="box-footer">
+                    [@Session["IdEmpresa"]] @Session["nom_empresa"]
+                </div>
+                <!-- /.box-footer-->
+
+
+
+
+            </div>
+            }
