--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/AprobacionOP/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/AprobacionOP/Index.cshtml
@@ -29,6 +29,7 @@
 @using (Html.BeginForm("Index", "AprobacionOP", FormMethod.Post, new { @role = "form", @class = "form", @id = "myform" }))
 {
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdUsuarioAprobacion, new { @id = "IdUsuarioAprobacion" })
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     <div class="box ">
         <div class="box-header with-border">
@@ -124,9 +125,8 @@
                 <div class="col-md-12">
                     <div class="col-md-12">
                         <div class="form-group">
-                            <label for="co_observacion">Observación*</label>
-                            @Html.TextBoxFor(q => q.MotivoAprobacion, new { @class = "form-control", @id = "observacion" })
-                            @Html.ValidationMessageFor(q => q.MotivoAprobacion, "", new { @class = "text-danger" })
+                            <label for="MotivoAprobacion">Observación</label>
+                            @Html.TextBoxFor(q => q.MotivoAprobacion, new { @class = "form-control", @id = "MotivoAprobacion" })
                         </div>
                     </div>
                 </div>
@@ -155,7 +155,9 @@
      function aprobar() {
         var datos = {
             IdEmpresa: $("#IdEmpresa").val(),
-            IDs: selectedIDs
+            IDs: selectedIDs,
+            MotivoAprobacion: $("#MotivoAprobacion").val(),
+            IdUsuarioAprobacion: $("#IdUsuarioAprobacion").val()
             }
         $("#btn_aprobar").attr("disabled", true);
         $.ajax({
@@ -168,6 +170,7 @@
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
+                $("#MotivoAprobacion").val("");
                 $("#myform").submit();
             },
             error: function (error) {
@@ -178,7 +181,9 @@
     function rechazar() {
         var datos = {
             IdEmpresa: $("#IdEmpresa").val(),
-            IDs: selectedIDs
+            IDs: selectedIDs,
+            MotivoAprobacion: $("#MotivoAprobacion").val(),
+            IdUsuarioAprobacion: $("#IdUsuarioAprobacion").val()
         }
         $("#btn_aprobar").attr("disabled", true);
         $.ajax({
@@ -191,6 +196,7 @@
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
+                $("#MotivoAprobacion").val("");
                 $("#myform").submit();
             },
             error: function (error) {
