--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Marca/_GridViewPartial_marca.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Marca/_GridViewPartial_marca.cshtml
@@ -80,7 +80,7 @@
             c.Settings.AllowSort = DefaultBoolean.False;
             c.Width = Unit.Pixel(150);
         });
-        settings.Columns.Add("IdMarca", "Código").Width = Unit.Percentage(10);
+        settings.Columns.Add("IdMarca", "ID").Width = Unit.Percentage(10);
         settings.Columns.Add("Descripcion", "Descripción").Width = Unit.Percentage(70);
         settings.Columns.Add(column =>
         {
